# libavif-decode-wasm

./: .gitignore  CMakeLists.txt  README.md  avifDecodeFileWeb.c  avifDecodeFileWeb.cpp  build.sh  cross_emscripten.ini  meson.build
back/: avifDecodeFileWeb.min.js
lib/: avifDecodeFileWeb.js  avifDecodeFileWeb.min.js  avifDecodeFileWeb.min.wasm  avifDecodeFileWeb.wasm
